--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-react</name>
-    <description>Demo project for Spring Boot React</description>
+    <name>springreact</name>
+    <description>Proyek Demo Spring React oleh komunitas Probolinggo Developer</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
