--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: java
-
 script: mvn package
-
+sudo: true
+dist: xenial
+jdk: oraclejdk8
+addons:
+  apt:
+    packages:
+    - oracle-java8-installer
+before_install:
+- chmod +x mvnw
 deploy:
   provider: heroku
   api_key:
