--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spring-react",
+  "name": "springreact",
   "version": "0.1.0-SNAPSHOT",
   "description": "Spring React",
   "repository": {
@@ -20,20 +20,17 @@
   },
   "homepage": "https://springreact.herokuapp.com",
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "rest": "^1.3.1"
   },
-  "scripts": {
-    "watch": "webpack --watch -d"
-  },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "babel-loader": "^8.0.2",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0"
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.23.0",
+    "webpack-cli": "^3.1.2"
   }
 }
