--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "babel-loader": "^8.0.4",
     "webpack": "^4.23.0",
